--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./api/app.js"
+    "start": "node api/index.js"
   },
   "dependencies": {
     "express": "^4.21.1"
